# python-project-lvl3

./: Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
page_loader/: __init__.py
page_loader/scripts/: download.py
tests/: test_page_loader.py
tests/fixtures/: expected.html  file.html
