[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page downloader"
authors = ["ilyas <ilyasers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
